tokenizer.c
/* Generated by re2c 4.0.1 */
#line 1 "tokenizer.re"
// Compile with:
// re2c --no-generation-date -b tokenizer.re -o tokenizer.c

#include <stdbool.h>

#include "tokenizer.h"


#define RET(x) \
    *token_type=x; \
    *position = cur-string; \
    return;

void tokenizer_get_next_token(const unsigned char *string,
        uint64_t *position, TokenType *token_type)
{
    const unsigned char *cur = string + *position;
    while (true) {
        /*
        Re2c has excellent documentation at:

        https://re2c.org/manual/manual_c.html

        The first paragraph there explains the basics:

        * If multiple rules match, the longest match takes precedence
        * If multiple rules match the same string, the earlier rule takes
          precedence
        * Default rule `*` should always be defined, it has the lowest priority
          regardless of its place and matches any code unit
        * We use the "Sentinel character" method for end of input:
            * The end of the input text is denoted with a null character \x00
            * Thus the null character cannot be part of the input otherwise
            * There is one rule to match \x00 to end the parser
            * No other rule is allowed to match \x00, otherwise the re2c block
              would parse past the end of the string and segfaults
            * A special case of the previous point are negated character
              ranges, such as [^"\x00], where one must include \x00 in it to
              ensure this rule does not match \x00 (all other rules simply do
              not mention \x00)
            * See the "Handling the end of input" section in the re2c
              documentation for more info

        The re2c block interacts with the rest of the code via just one pointer
        variable `cur`. On entering the re2c block, the `cur` variable must
        point to the first character of the token to be tokenized by the block.
        The re2c block below then executes on its own until a rule is matched:
        the action in {} is then executed. In that action `cur` points to the
        first character of the next token.

        Before the re2c block we save the current `cur` into `tok`, so that we
        can use `tok` and `cur` in the action in {} to extract the token that
        corresponds to the rule that got matched:

        * `tok` points to the first character of the token
        * `cur-1` points to the last character of the token
        * `cur` points to the first character of the next token
        * `cur-tok` is the length of the token

        In the action, we do one of:

        * call `continue` which executes another cycle in the for loop (which
          will parse the next token); we use this to skip a token
        * call `return` which returns from this function; we return a token

        In both cases, `cur` points to first character of the next
        token, which becomes `tok` at the next iteration of the loop (either
        right away after `continue` or after the `lex` function is called again
        after `return`).

        See the manual for more details.
        */


        // These two variables are needed by the re2c block below internally,
        // initialization is not needed. One can think of them as local
        // variables of the re2c block.
        const unsigned char *mar, *ctxmar;
        
#line 83 "tokenizer.c"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	static const unsigned char yybm[256] = {
		  0, 192, 192, 192, 192, 192, 192, 192,
		192, 200,  64, 200, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		200, 192, 128, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		240, 240, 240, 240, 240, 240, 240, 240,
		240, 240, 192, 192, 192, 192, 192, 192,
		192, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 192, 192, 192, 192, 224,
		192, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 224, 224, 224, 224, 224,
		224, 224, 224, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192,
		192, 192, 192, 192, 192, 192, 192, 192
	};
	yych = *cur;
	if (yybm[0+yych] & 8) goto yy4;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t':
		case '\n': goto yy5;
		case '\r': goto yy6;
		case ' ':
		case '!': goto yy7;
		case '"': goto yy8;
		case '#': goto yy9;
		case '$': goto yy10;
		case '%': goto yy11;
		case '(': goto yy13;
		case ')': goto yy14;
		case '*': goto yy15;
		case '+': goto yy16;
		case ',': goto yy17;
		case '-': goto yy18;
		case '.': goto yy19;
		case '/': goto yy21;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy22;
		case ':': goto yy24;
		case ';': goto yy25;
		case '<': goto yy26;
		case '=': goto yy27;
		case '>': goto yy28;
		case '@': goto yy29;
		case 'A':
		case 'a': goto yy31;
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'x':
		case 'y':
		case 'z': goto yy33;
		case 'W':
		case 'w': goto yy35;
		case '[': goto yy36;
		case ']': goto yy37;
		case '^': goto yy38;
		case '{': goto yy39;
		case '|': goto yy41;
		case '}': goto yy42;
		default: goto yy2;
	}
yy1:
	++cur;
#line 103 "tokenizer.re"
	{ RET(TK_EOF) }
#line 223 "tokenizer.c"
yy2:
	++cur;
yy3:
#line 102 "tokenizer.re"
	{ RET(TK_ERROR) }
#line 229 "tokenizer.c"
yy4:
	yych = *++cur;
	if (yybm[0+yych] & 8) goto yy4;
#line 104 "tokenizer.re"
	{ RET(TK_WHITESPACE) }
#line 235 "tokenizer.c"
yy5:
	++cur;
#line 105 "tokenizer.re"
	{ RET(TK_NEWLINE) }
#line 240 "tokenizer.c"
yy6:
	yych = *++cur;
	if (yych == '\n') goto yy5;
	goto yy3;
yy7:
	++cur;
#line 122 "tokenizer.re"
	{ RET(TK_EXCLAMATION) }
#line 249 "tokenizer.c"
yy8:
	yyaccept = 0;
	yych = *(mar = ++cur);
	if (yych <= 0x00) goto yy3;
	goto yy44;
yy9:
	yych = *++cur;
	if (yych <= '^') {
		if (yych <= '@') goto yy3;
		if (yych <= 'Z') goto yy47;
		goto yy3;
	} else {
		if (yych == '`') goto yy3;
		if (yych <= 'z') goto yy47;
		goto yy3;
	}
yy10:
	++cur;
#line 123 "tokenizer.re"
	{ RET(TK_DOLLAR) }
#line 270 "tokenizer.c"
yy11:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy12;
		if (yych <= '9') goto yy49;
		if (yych >= 'A') goto yy51;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy51;
		} else {
			if (yych <= '`') goto yy12;
			if (yych <= 'z') goto yy51;
		}
	}
yy12:
#line 130 "tokenizer.re"
	{ RET(TK_PERCENT) }
#line 288 "tokenizer.c"
yy13:
	++cur;
#line 113 "tokenizer.re"
	{ RET(TK_LPAREN) }
#line 293 "tokenizer.c"
yy14:
	++cur;
#line 114 "tokenizer.re"
	{ RET(TK_RPAREN) }
#line 298 "tokenizer.c"
yy15:
	++cur;
#line 132 "tokenizer.re"
	{ RET(TK_STAR) }
#line 303 "tokenizer.c"
yy16:
	++cur;
#line 124 "tokenizer.re"
	{ RET(TK_PLUS) }
#line 308 "tokenizer.c"
yy17:
	++cur;
#line 131 "tokenizer.re"
	{ RET(TK_COMMA) }
#line 313 "tokenizer.c"
yy18:
	yych = *++cur;
	if (yych == '>') goto yy52;
#line 125 "tokenizer.re"
	{ RET(TK_MINUS) }
#line 319 "tokenizer.c"
yy19:
	yych = *++cur;
	if (yych <= '/') goto yy20;
	if (yych <= '9') goto yy53;
yy20:
#line 135 "tokenizer.re"
	{ RET(TK_DOT) }
#line 327 "tokenizer.c"
yy21:
	yych = *++cur;
	if (yych == '/') goto yy55;
#line 129 "tokenizer.re"
	{ RET(TK_SLASH) }
#line 333 "tokenizer.c"
yy22:
	yyaccept = 1;
	yych = *(mar = ++cur);
	if (yybm[0+yych] & 16) goto yy22;
	if (yych <= 'E') {
		if (yych == '.') goto yy53;
		if (yych >= 'D') goto yy56;
	} else {
		if (yych <= 'e') {
			if (yych >= 'd') goto yy56;
		} else {
			if (yych == 'x') goto yy57;
		}
	}
yy23:
#line 148 "tokenizer.re"
	{ RET(TK_INTEGER) }
#line 351 "tokenizer.c"
yy24:
	++cur;
#line 127 "tokenizer.re"
	{ RET(TK_COLON) }
#line 356 "tokenizer.c"
yy25:
	++cur;
#line 128 "tokenizer.re"
	{ RET(TK_SEMICOLON) }
#line 361 "tokenizer.c"
yy26:
	++cur;
#line 120 "tokenizer.re"
	{ RET(TK_LANGLE) }
#line 366 "tokenizer.c"
yy27:
	++cur;
#line 126 "tokenizer.re"
	{ RET(TK_EQUAL) }
#line 371 "tokenizer.c"
yy28:
	++cur;
#line 121 "tokenizer.re"
	{ RET(TK_RANGLE) }
#line 376 "tokenizer.c"
yy29:
	yych = *++cur;
	if (yych <= '^') {
		if (yych <= '@') goto yy30;
		if (yych <= 'Z') goto yy59;
	} else {
		if (yych == '`') goto yy30;
		if (yych <= 'z') goto yy59;
	}
yy30:
#line 134 "tokenizer.re"
	{ RET(TK_AT) }
#line 389 "tokenizer.c"
yy31:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych <= 'L') {
		if (yych == 'B') goto yy62;
		if (yych <= 'K') goto yy34;
		goto yy63;
	} else {
		if (yych <= 'b') {
			if (yych <= 'a') goto yy34;
			goto yy62;
		} else {
			if (yych == 'l') goto yy63;
			goto yy34;
		}
	}
yy32:
#line 144 "tokenizer.re"
	{ RET(TK_NAME) }
#line 409 "tokenizer.c"
yy33:
	yyaccept = 2;
	yych = *(mar = ++cur);
yy34:
	if (yybm[0+yych] & 32) goto yy33;
	if (yych == '.') goto yy61;
	goto yy32;
yy35:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'R') goto yy64;
	if (yych == 'r') goto yy64;
	goto yy34;
yy36:
	++cur;
#line 115 "tokenizer.re"
	{ RET(TK_LBRACKET) }
#line 427 "tokenizer.c"
yy37:
	++cur;
#line 116 "tokenizer.re"
	{ RET(TK_RBRACKET) }
#line 432 "tokenizer.c"
yy38:
	yych = *++cur;
	if (yych <= '^') {
		if (yych <= '@') goto yy3;
		if (yych <= 'Z') goto yy65;
		goto yy3;
	} else {
		if (yych == '`') goto yy3;
		if (yych <= 'z') goto yy65;
		goto yy3;
	}
yy39:
	yyaccept = 3;
	yych = *(mar = ++cur);
	if (yych == '\n') {
		ctxmar = cur;
		goto yy67;
	}
	if (yych == '\r') {
		ctxmar = cur;
		goto yy68;
	}
yy40:
#line 117 "tokenizer.re"
	{ RET(TK_LBRACE) }
#line 458 "tokenizer.c"
yy41:
	++cur;
#line 133 "tokenizer.re"
	{ RET(TK_VBAR) }
#line 463 "tokenizer.c"
yy42:
	++cur;
#line 119 "tokenizer.re"
	{ RET(TK_RBRACE) }
#line 468 "tokenizer.c"
yy43:
	yych = *++cur;
yy44:
	if (yybm[0+yych] & 64) goto yy43;
	if (yych >= 0x01) goto yy46;
yy45:
	cur = mar;
	if (yyaccept <= 4) {
		if (yyaccept <= 2) {
			if (yyaccept <= 1) {
				if (yyaccept == 0) goto yy3;
				else goto yy23;
			} else {
				goto yy32;
			}
		} else {
			if (yyaccept == 3) goto yy40;
			else goto yy54;
		}
	} else {
		if (yyaccept <= 6) {
			if (yyaccept == 5) goto yy58;
			else goto yy77;
		} else {
			if (yyaccept == 7) goto yy83;
			else goto yy87;
		}
	}
yy46:
	++cur;
#line 151 "tokenizer.re"
	{ RET(TK_STRING) }
#line 501 "tokenizer.c"
yy47:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy48;
		if (yych <= '9') goto yy47;
		if (yych >= 'A') goto yy47;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy47;
		} else {
			if (yych <= '`') goto yy48;
			if (yych <= 'z') goto yy47;
		}
	}
yy48:
#line 141 "tokenizer.re"
	{ RET(TK_HASH_NAME); }
#line 519 "tokenizer.c"
yy49:
	yych = *++cur;
	if (yych <= '/') goto yy50;
	if (yych <= '9') goto yy49;
yy50:
#line 146 "tokenizer.re"
	{ RET(TK_REGISTER) }
#line 527 "tokenizer.c"
yy51:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy50;
		if (yych <= '9') goto yy51;
		if (yych <= '@') goto yy50;
		goto yy51;
	} else {
		if (yych <= '_') {
			if (yych <= '^') goto yy50;
			goto yy51;
		} else {
			if (yych <= '`') goto yy50;
			if (yych <= 'z') goto yy51;
			goto yy50;
		}
	}
yy52:
	++cur;
#line 139 "tokenizer.re"
	{ RET(TK_ARROW) }
#line 549 "tokenizer.c"
yy53:
	yyaccept = 4;
	yych = *(mar = ++cur);
	if (yych <= 'C') {
		if (yych <= '/') goto yy54;
		if (yych <= '9') goto yy53;
	} else {
		if (yych <= 'E') goto yy56;
		if (yych <= 'c') goto yy54;
		if (yych <= 'e') goto yy56;
	}
yy54:
#line 150 "tokenizer.re"
	{ RET(TK_REAL) }
#line 564 "tokenizer.c"
yy55:
	yych = *++cur;
	if (yybm[0+yych] & 128) goto yy55;
#line 138 "tokenizer.re"
	{ RET(TK_COMMENT) }
#line 570 "tokenizer.c"
yy56:
	yych = *++cur;
	if (yych <= ',') {
		if (yych == '+') goto yy69;
		goto yy45;
	} else {
		if (yych <= '-') goto yy69;
		if (yych <= '/') goto yy45;
		if (yych <= '9') goto yy70;
		goto yy45;
	}
yy57:
	yyaccept = 5;
	yych = *(mar = ++cur);
	if (yych <= '/') goto yy58;
	if (yych <= '9') goto yy71;
	if (yych == '?') goto yy72;
yy58:
#line 149 "tokenizer.re"
	{ RET(TK_TYPE_DIM) }
#line 591 "tokenizer.c"
yy59:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy60;
		if (yych <= '9') goto yy59;
		if (yych >= 'A') goto yy59;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy59;
		} else {
			if (yych <= '`') goto yy60;
			if (yych <= 'z') goto yy59;
		}
	}
yy60:
#line 147 "tokenizer.re"
	{ RET(TK_FUNCTION_NAME) }
#line 609 "tokenizer.c"
yy61:
	yych = *++cur;
	if (yych <= '^') {
		if (yych <= '@') goto yy45;
		if (yych <= 'Z') goto yy73;
		goto yy45;
	} else {
		if (yych == '`') goto yy45;
		if (yych <= 'z') goto yy73;
		goto yy45;
	}
yy62:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'S') goto yy75;
	if (yych == 's') goto yy75;
	goto yy34;
yy63:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'L') goto yy76;
	if (yych == 'l') goto yy76;
	goto yy34;
yy64:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'I') goto yy78;
	if (yych == 'i') goto yy78;
	goto yy34;
yy65:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy66;
		if (yych <= '9') goto yy65;
		if (yych >= 'A') goto yy65;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy65;
		} else {
			if (yych <= '`') goto yy66;
			if (yych <= 'z') goto yy65;
		}
	}
yy66:
#line 142 "tokenizer.re"
	{ RET(TK_CARET_NAME); }
#line 656 "tokenizer.c"
yy67:
	++cur;
	cur = ctxmar;
#line 118 "tokenizer.re"
	{ RET(TK_LBRACE_END) }
#line 662 "tokenizer.c"
yy68:
	yych = *++cur;
	if (yych == '\n') goto yy67;
	goto yy45;
yy69:
	yych = *++cur;
	if (yych <= '/') goto yy45;
	if (yych >= ':') goto yy45;
yy70:
	yych = *++cur;
	if (yych <= '/') goto yy54;
	if (yych <= '9') goto yy70;
	goto yy54;
yy71:
	yych = *++cur;
	if (yych <= '/') goto yy45;
	if (yych <= '9') goto yy71;
	if (yych == 'x') goto yy57;
	goto yy45;
yy72:
	yych = *++cur;
	if (yych == 'x') goto yy57;
	goto yy45;
yy73:
	yych = *++cur;
	if (yych <= 'Z') {
		if (yych <= '/') goto yy74;
		if (yych <= '9') goto yy73;
		if (yych >= 'A') goto yy73;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy73;
		} else {
			if (yych <= '`') goto yy74;
			if (yych <= 'z') goto yy73;
		}
	}
yy74:
#line 145 "tokenizer.re"
	{ RET(TK_NAME_DOT_NAME) }
#line 703 "tokenizer.c"
yy75:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'T') goto yy79;
	if (yych == 't') goto yy79;
	goto yy34;
yy76:
	yyaccept = 6;
	yych = *(mar = ++cur);
	if (yybm[0+yych] & 32) goto yy33;
	if (yych == '.') goto yy61;
yy77:
#line 109 "tokenizer.re"
	{ RET(KW_ALL) }
#line 718 "tokenizer.c"
yy78:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'T') goto yy80;
	if (yych == 't') goto yy80;
	goto yy34;
yy79:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'R') goto yy81;
	if (yych == 'r') goto yy81;
	goto yy34;
yy80:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'E') goto yy82;
	if (yych == 'e') goto yy82;
	goto yy34;
yy81:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'A') goto yy84;
	if (yych == 'a') goto yy84;
	goto yy34;
yy82:
	yyaccept = 7;
	yych = *(mar = ++cur);
	if (yybm[0+yych] & 32) goto yy33;
	if (yych == '.') goto yy61;
yy83:
#line 110 "tokenizer.re"
	{ RET(KW_WRITE) }
#line 751 "tokenizer.c"
yy84:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'C') goto yy85;
	if (yych != 'c') goto yy34;
yy85:
	yyaccept = 2;
	yych = *(mar = ++cur);
	if (yych == 'T') goto yy86;
	if (yych != 't') goto yy34;
yy86:
	yyaccept = 8;
	yych = *(mar = ++cur);
	if (yybm[0+yych] & 32) goto yy33;
	if (yych == '.') goto yy61;
yy87:
#line 108 "tokenizer.re"
	{ RET(KW_ABSTRACT) }
#line 770 "tokenizer.c"
}
#line 152 "tokenizer.re"

    }
}
